--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="calculator-body">
+        <div class="display">
+            <div class="display top"></div>
+            <div class="display bottom"></div>
+        </div>
+        <div class="button-area">
+            <div class="button" data-key="empty"></div>
+            <div class="button" data-key="clear">C</div>
+            <div class="button" data-key="backspace">⌫</div>
+            <div class="button" data-key="plusminus">±</div>
+            <div class="button" data-key="7">7</div>
+            <div class="button" data-key="8">8</div>
+            <div class="button" data-key="9">9</div>
+            <div class="button" data-key="divide">÷</div>
+            <div class="button" data-key="4">4</div>
+            <div class="button" data-key="5">5</div>
+            <div class="button" data-key="6">6</div>
+            <div class="button" data-key="multiply">×</div>
+            <div class="button" data-key="1">1</div>
+            <div class="button" data-key="2">2</div>
+            <div class="button" data-key="3">3</div>
+            <div class="button" data-key="minus">-</div>
+            <div class="button" data-key="decimal">.</div>
+            <div class="button" data-key="0">0</div>
+            <div class="button" data-key="equal">=</div>
+            <div class="button" data-key="add">+</div>
+        </div>
+    </div>
 </body>
 </html>
