Add styles to elements

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="calculator-body">
-        <div class="display">
+        <div class="display container">
             <div class="display top"></div>
             <div class="display bottom"></div>
         </div>
-        <div class="button-area">
+        <div class="button container">
             <div class="button" data-key="empty"></div>
             <div class="button" data-key="clear">C</div>
             <div class="button" data-key="backspace">⌫</div>
