--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="calculator-body">
         <div class="display container">
-            <div class="display top"></div>
-            <div class="display bottom"></div>
+            <div class="display top">941.294</div>
+            <div class="display bottom">-125.41</div>
         </div>
         <div class="button container">
             <div class="button" data-key="empty"></div>
