--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
             <div class="display bottom">-125.41</div>
         </div>
         <div class="button container">
-            <div class="button" data-key="empty"></div>
-            <div class="button" data-key="clear">C</div>
-            <div class="button" data-key="backspace">⌫</div>
-            <div class="button" data-key="plusminus">±</div>
-            <div class="button" data-key="7">7</div>
-            <div class="button" data-key="8">8</div>
-            <div class="button" data-key="9">9</div>
-            <div class="button" data-key="divide">÷</div>
-            <div class="button" data-key="4">4</div>
-            <div class="button" data-key="5">5</div>
-            <div class="button" data-key="6">6</div>
-            <div class="button" data-key="multiply">×</div>
-            <div class="button" data-key="1">1</div>
-            <div class="button" data-key="2">2</div>
-            <div class="button" data-key="3">3</div>
-            <div class="button" data-key="minus">-</div>
-            <div class="button" data-key="decimal">.</div>
-            <div class="button" data-key="0">0</div>
-            <div class="button" data-key="equal">=</div>
-            <div class="button" data-key="add">+</div>
+            <div class="button" data-keyalt="" data-key=""></div>
+            <div class="button" data-keyalt="" data-key="Escape">C</div>
+            <div class="button" data-keyalt="Delete" data-key="Backspace">⌫</div>
+            <div class="button" data-keyalt="" data-key="n">±</div>
+            <div class="button" data-keyalt="" data-key="7">7</div>
+            <div class="button" data-keyalt="" data-key="8">8</div>
+            <div class="button" data-keyalt="" data-key="9">9</div>
+            <div class="button" data-keyalt="d" data-key="/">÷</div>
+            <div class="button" data-keyalt="" data-key="4">4</div>
+            <div class="button" data-keyalt="" data-key="5">5</div>
+            <div class="button" data-keyalt="" data-key="6">6</div>
+            <div class="button" data-keyalt="x" data-key="*">×</div>
+            <div class="button" data-keyalt="" data-key="1">1</div>
+            <div class="button" data-keyalt="" data-key="2">2</div>
+            <div class="button" data-keyalt="" data-key="3">3</div>
+            <div class="button" data-keyalt="s" data-key="-">-</div>
+            <div class="button" data-keyalt="" data-key=".">.</div>
+            <div class="button" data-keyalt="" data-key="0">0</div>
+            <div class="button" data-keyalt="Enter" data-key="=">=</div>
+            <div class="button" data-keyalt="a" data-key="+">+</div>
         </div>
     </div>
 </body>
