Fix style for zero button

--- a/index.html
+++ b/index.html
@@ -15,26 +15,25 @@
             <div class="display bottom">0</div>
         </div>
         <div class="button container">
-            <div class="button special" data-keyalt="" data-key="Escape">C</div>
-            <div class="button special" data-keyalt="" data-key="n">±</div>
-            <div class="button special" data-keyalt="Delete" data-key="Backspace">⌫</div>
-            <div class="button operation" data-keyalt="d" data-key="/">÷</div>
-            <div class="button" data-keyalt="" data-key="7">7</div>
-            <div class="button" data-keyalt="" data-key="8">8</div>
-            <div class="button" data-keyalt="" data-key="9">9</div>
-            <div class="button operation" data-keyalt="x" data-key="*">×</div>
-            <div class="button" data-keyalt="" data-key="4">4</div>
-            <div class="button" data-keyalt="" data-key="5">5</div>
-            <div class="button" data-keyalt="" data-key="6">6</div>
-            <div class="button operation" data-keyalt="s" data-key="-">-</div>
-            <div class="button" data-keyalt="" data-key="1">1</div>
-            <div class="button" data-keyalt="" data-key="2">2</div>
-            <div class="button" data-keyalt="" data-key="3">3</div>
-            <div class="button operation" data-keyalt="a" data-key="+">+</div>
-            <div class="button blank" data-keyalt="" data-key=""></div>
-            <div class="button" data-keyalt="" data-key="0">0</div>
-            <div class="button" data-keyalt="" data-key=".">.</div>
-            <div class="button operation" data-keyalt="Enter" data-key="=">=</div>
+            <div class="button special gridclr" data-keyalt="" data-key="Escape">C</div>
+            <div class="button special gridpm" data-keyalt="" data-key="n">±</div>
+            <div class="button special gridbck" data-keyalt="Delete" data-key="Backspace">⌫</div>
+            <div class="button operation griddiv" data-keyalt="d" data-key="/">÷</div>
+            <div class="button grid7" data-keyalt="" data-key="7">7</div>
+            <div class="button grid8" data-keyalt="" data-key="8">8</div>
+            <div class="button grid9" data-keyalt="" data-key="9">9</div>
+            <div class="button operation gridx" data-keyalt="x" data-key="*">×</div>
+            <div class="button grid4" data-keyalt="" data-key="4">4</div>
+            <div class="button grid5" data-keyalt="" data-key="5">5</div>
+            <div class="button grid6" data-keyalt="" data-key="6">6</div>
+            <div class="button operation gridm" data-keyalt="s" data-key="-">-</div>
+            <div class="button grid1" data-keyalt="" data-key="1">1</div>
+            <div class="button grid2" data-keyalt="" data-key="2">2</div>
+            <div class="button grid3" data-keyalt="" data-key="3">3</div>
+            <div class="button operation gridp" data-keyalt="a" data-key="+">+</div>
+            <div class="button number grid0" data-keyalt="" data-key="0">0</div>
+            <div class="button griddec" data-keyalt="" data-key=".">.</div>
+            <div class="button operation gride" data-keyalt="Enter" data-key="=">=</div>
         </div>
     </div>
 </body>
